--- a/frontend/pricing/jade/pricing.jade
+++ b/frontend/pricing/jade/pricing.jade
@@ -34,10 +34,16 @@
 			.pricingInfo(layout="column", layout-align="start")
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
-					h3 10Gb Server Space
+					h3 10GB Server Space
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
 					h3 Unlimited Projects
+				.pricingInfoLine(layout="column", layout-align="start center")
+					md-icon.angular-material-icons stars
+					h3 Collaboration
+				.pricingInfoLine(layout="column", layout-align="start center")
+					md-icon.angular-material-icons stars
+					h3 Demo Project
 			md-divider
 			div(layout="row", layout-align="center center")
 				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp', true)") Sign Up
