--- a/frontend/account/jade/overQuotaDialog.jade
+++ b/frontend/account/jade/overQuotaDialog.jade
@@ -1,4 +1,4 @@
-md-dialog.overQuotaDialog(aria-label="Over quota")
+md-dialog#overQuotaDialog(aria-label="Over quota")
 	md-toolbar
 		.md-toolbar-tools
 			h2 Quota
@@ -6,17 +6,19 @@ md-dialog.overQuotaDialog(aria-label="Over quota")
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
 	md-content(layout-margin)
-		div(layout="column")
-			.cardInfo
-				p You currently do not have enough quota to upload this file.
-				p To add more quota please upgrade to more licenses.
-			div(layout="row")
-				md-input-container(flex)
-					label Quota used (Gb)
-					input(type="text", value="{{vm.quota.spaceUsed | formatBytes}}", ng-disabled="true")
-				md-input-container(flex)
-					label Quota available (Gb)
-					input(type="text", value="{{vm.quota.spaceLimit | formatBytes}}", ng-disabled="true")
-			div(layout="row", layout-align="start")
-				md-button.md-accent.md-raised(ng-click="vm.setupAddLicenses()") Add licenses
-				md-button.md-accent(ng-click="vm.closeDialog()") Cancel
+		.cardInfo
+			p You currently do not have enough quota to upload this file.
+			br
+			p
+				| Please go to the
+				=" "
+				a(href="", ng-click="vm.setupAddLicenses()") Billing Page
+				=" "
+				| to add more licenses.
+		#overQuotaInfo(layout="row", flex="90", layout-align="center center")
+			md-input-container(flex)
+				label Quota available
+				input(type="text", value="{{vm.quota.spaceLimit | formatBytes}}", ng-disabled="true")
+			md-input-container(flex)
+				label Quota used
+				input(type="text", value="{{vm.quota.spaceUsed | formatBytes}}", ng-disabled="true")
