ISSUE #227 - Improved billing page and printing, introduced US states dropdown

--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -47,12 +47,14 @@
 									label Address 2
 									input(type="text", ng-model="vm.newBillingAddress.line2")
 
-
-
 							div(layout="column", flex)
 								md-input-container(flex)
 									label City
 									input(type="text", ng-model="vm.newBillingAddress.city", required)
+								//md-input-container(flex, ng-if="vm.showStates")
+									label State
+									md-select(ng-model="vm.newBillingAddress.state", required)
+										md-option(ng-repeat="country in vm.countries", value="{{country.code}}") {{country.name}}
 								md-input-container(flex)
 									label Postal code
 									input(type="text", ng-model="vm.newBillingAddress.postalCode", required)
