--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -2,8 +2,8 @@ img#homeBackground(src="/public/images/viewer_background.jpg")
 #legalLinks(layout="row")
 	md-button.md-primary(ng-repeat="display in vm.legalDisplays", ng-click="vm.legalDisplay($event, display)") {{display.title}}
 
-#homeLogo
-	img(src="/public/images/3drepo-logo-white.png")
+#homeLogo(style="pointer-events:{{vm.pointerEvents}}")
+	img(src="/public/images/3drepo-logo-white.png", ng-click="vm.home()")
 
 #homeLoggedOut(ng-show="!vm.state.changing")
 
