ISSUE #227 - Added enter trigger for passwordForgot, styling for passwordChange

--- a/frontend/passwordChange/jade/passwordChange.jade
+++ b/frontend/passwordChange/jade/passwordChange.jade
@@ -14,7 +14,7 @@
 						h3(style="color:{{vm.messageColor}}") {{vm.message}}
 						md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
 
-			div(layout="column", layout-align="center center", ng-if="vm.passwordChanged")
-				h4(style="color:{{vm.messageColor}}") {{vm.message}}
-				md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
+			div(layout="column", layout-align="start start", ng-if="vm.passwordChanged")
+				p(style="color:{{vm.messageColor}}") {{vm.message}}
+				md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Login Page
 
