ISSUE #232 - Created accountRepos which has projects and federations under a tab menu

--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -9,7 +9,7 @@ div(ng-if="!vm.state.project")
 		item-to-show="vm.itemToShow")
 
 		#accountItem(ng-switch="vm.itemToShow")
-			account-projects(
+			account-repos(
 			ng-switch-when="repos"
 			account="vm.account"
 			accounts="vm.accounts"
