--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -421,3 +421,14 @@ account-team #accountTeamSubHeader {
 #overQuotaDialog #overQuotaInfo {
   margin: 20px 20px 0;;
 }
+
+/** Federation Dialog *************************************************************************************************/
+#federationDialog #federationDivider {
+  width: 1px;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+#federationDialog #federationSave {
+  margin-top: 10px;
+}
