--- a/frontend/account/jade/accountFederations.jade
+++ b/frontend/account/jade/accountFederations.jade
@@ -1,3 +1,6 @@
+.userContent
+	.cardInfo
+		p You do not currently have any federations set up
 div(layout="row" layout-align="end" layout-margin)
 	md-button.md-accent.md-fab.md-mini(aria-label="Add" ng-click="vm.setupFederation($event)")
 		md-icon.angular-material-icons add
