--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -1,4 +1,4 @@
-md-dialog.newProjectDialog(aria-label="Federation")
+md-dialog#federationDialog(aria-label="Federation", flex="40")
 	md-toolbar
 		.md-toolbar-tools
 			h2 Federation
@@ -6,10 +6,34 @@ md-dialog.newProjectDialog(aria-label="Federation")
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
 	md-content(layout-margin)
-		div(layout="column")
-			md-input-container
-				input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.name")
-				.inputHint Letters, numbers and underscore only
-			div(layout="row", layout-align="start center")
+		div(layout="column", flex)
+			div(layout="row", flex)
+				md-input-container(flex="50")
+					input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.name")
+					.inputHint Letters, numbers and underscore only
+
+			md-divider
+
+			div(layout="row", flex)
+				div(layout="column", flex)
+					p.federationTitle(layout="row", layout-align="center center") Available
+					div(ng-repeat="account in vm.accounts", flex)
+						div(layout="row", layout-align="start center")
+							md-button.md-icon-button(aria-label="Folder")
+								md-icon.angular-material-icons {{account.showProjectsIcon}}
+							md-list-item
+								p {{account.account}}
+							span(flex)
+							md-button.md-icon-button(aria-label="Add", ng-click="vm.newProject($event)")
+								md-icon.angular-material-icons.md-accent add_circle
+
+				div(layout="row", layout-align="center")
+					#federationDivider(flex="none")
+				div(layout="column", flex)
+					p.federationTitle(layout="row", layout-align="center center") Federated
+
+			md-divider
+
+			#federationSave(layout="row", layout-align="start center")
 				md-button.md-raised.md-accent(ng-disabled="vm.newProjectButtonDisabled", ng-click="vm.saveFederation()") Save
 				md-button.md-accent(ng-disabled="vm.newProjectButtonDisabled", ng-click="vm.closeDialog()") Cancel
