ISSUE #232 - Added projects list and federated list to federation dialog

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -432,3 +432,23 @@ account-team #accountTeamSubHeader {
 #federationDialog #federationSave {
   margin-top: 10px;
 }
+
+#federationDialog md-list {
+  padding: 0;
+}
+
+#federationDialog md-list-item {
+  height: 35px;
+  min-height: 35px;
+}
+#federationDialog md-list-item p {
+  margin-left: -20px;
+}
+
+#federationDialog .federationProject {
+  padding-left: 40px;
+}
+
+#federationDialog #federatedProjectAccount {
+  color: rgba(0, 0, 0, 0.5);
+}
