ISSUE #227 - companyName changed to company for billing address

--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -32,7 +32,7 @@
 					div(layout="row")
 						md-input-container(flex)
 							label Company Name
-							input(type="text", ng-model="vm.newBillingAddress.companyName", ng-required="vm.companyNameRequired")
+							input(type="text", ng-model="vm.newBillingAddress.company", ng-required="vm.companyNameRequired")
 						md-input-container(flex)
 							label VAT Number
 							input(type="text", ng-model="vm.newBillingAddress.vat")
