ISSUE #227 - Changed link buttons to links, project disabled if uploading, fixed input auto fill

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -326,8 +326,8 @@ account-billing .accountBillingSave img {
   margin-top: 17px;
 }
 
-account-billing #accountBillingAddressInfo {
-  margin: 0;
+account-billing .accountBillingAddressInfo {
+  margin: 0 0 5px;
   font-size: 12px;
   color: rgba(0, 0, 0, 0.4);
 }
