--- a/frontend/account/jade/accountTeam.jade
+++ b/frontend/account/jade/accountTeam.jade
@@ -38,7 +38,7 @@
 
 					div(ng-if="vm.noLicensesAssigned")
 						.cardInfo
-							p You do not have any licenses assigned to other users. You currently have {{vm.subscriptions.length - 1}} license(s) unassigned.
+							p You do not have any licenses assigned to other users. You currently have {{vm.numSubscriptions - 1}} license(s) unassigned.
 							br
 							p
 								| Please go to the
