--- a/frontend/account/jade/accountLicenses.jade
+++ b/frontend/account/jade/accountLicenses.jade
@@ -39,7 +39,7 @@
 					md-content#accountLicensesList
 						section
 							md-subheader
-								div Licenses ({{vm.licenses.length}} assigned, {{vm.numLicenses}} total)
+								div Licenses ({{vm.numLicenses}} assigned, {{vm.numLicenses}} total)
 						md-list-item(ng-repeat="license in vm.licenses")
 							md-icon.angular-material-icons.licenseIcon(aria-label="Person") person
 							.md-list-item-text
