--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -94,11 +94,10 @@ home #legalLinks {
     right: 0;
     z-index: 2;
 }
-home #legalLinks .md-button {
-    font-size: 11px;
-    margin: 0;
+home #legalLinks a {
+    font-size: 12px;
+    margin: 10px 10px 5px;
     opacity: 0.7;
-    min-width: 65px;
 }
 
 home md-radio-button ._md-label {
