--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -11,13 +11,22 @@
 				div(layout="column", flex)
 					md-input-container.md-block
 						label Username
-						input(type='text', ng-model='vm.user.username', ng-required, autofocus, ng-keypress="vm.login($event)")
+						input(type='text', ng-model='vm.user.username', ng-required, tdr-focus="true", ng-keypress="vm.login($event)")
+
+					// Hidden inputs to prevent autofill
+					#loginHiddenInputs(ng-show="false", layout="column")
+						input(type='text')
+						input(type='password')
+
 					md-input-container.md-block
 						label Password
 						input(type='password', ng-model='vm.user.password', ng-required, ng-keypress="vm.login($event)")
+
 					div(layout="row", layout-align="start" flex="none")
 						md-button.md-accent.md-raised(ng-click="vm.login()") Log In
 					h4.loginError {{vm.errorMessage}}
-					a.loginLinks(href="", ng-click="vm.showPage('passwordForgot')") Forgot password?
-					a.loginLinks(href="", ng-click="vm.showPage('pricing')") Sign up
+					div(layout="row", layout-align="start center", flex="none")
+						a.loginLinks(href="passwordForgot") Forgot password?
+					div(layout="row", layout-align="start center", flex="none")
+						a.loginLinks(href="pricing") Sign up
 					h2.md-subhead#loginVersion Version: {{vm.version}}
