--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -81,9 +81,9 @@
 							div(layout="row", layout-align="start")
 								label(flex="20") ID
 								label(flex="15") Date
-								label(flex="20") Description
-								label(flex="20") Payment Method
-								label(flex="15") Amount (£)
+								label(flex="30") Description
+								label(flex="15") Payment
+								label(flex="10") Amount (£)
 
 					div
 						.accountBillingHistoryListItem(layout="row", layout-align="start start", ng-repeat="billing in vm.billings")
@@ -91,11 +91,11 @@
 								input(type="text", value="{{billing.billingAgreementId}}", ng-disabled="true", aria-label="id")
 							md-input-container(flex="15")
 								input(type="text", value="{{billing.createdAt | date:'dd-MM-yyyy'}}", ng-disabled="true", aria-label="date")
-							md-input-container(flex="20")
-								input(type="text", value="{{billing.items[0].name}}", ng-disabled="true", aria-label="description")
-							md-input-container(flex="20")
-								input(type="text", value="{{billing.gateway}}", ng-disabled="true", aria-label="paymentMethod")
+							md-input-container(flex="30")
+								input(type="text", value="{{billing.items[0].description}}", ng-disabled="true", aria-label="description")
 							md-input-container(flex="15")
+								input(type="text", value="{{billing.gateway}}", ng-disabled="true", aria-label="paymentMethod")
+							md-input-container(flex="10")
 								input(type="text", value="{{billing.amount}}", ng-disabled="true", aria-label="amount")
-							md-button.md-icon-button.md-accent(aria-label="Download", ng-click="vm.downloadBilling($index)", flex="none")
+							md-button.md-icon-button.md-accent(aria-label="Download", ng-click="vm.downloadBilling($index)", flex="5")
 								md-icon.angular-material-icons cloud_download
