--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -10,8 +10,8 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 			// Federation name
 			div(layout="row", flex)
 				md-input-container(flex="50")
-					input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.name")
-					.inputHint Letters, numbers and underscore only
+					input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.name", ng-disabled="vm.federationOriginalData")
+					.inputHint(ng-if="!vm.federationOriginalData") Letters, numbers and underscore only
 
 			md-divider
 
@@ -45,7 +45,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 				div(layout="column", flex)
 					p(layout="row", layout-align="center center") Federated
 					md-list
-						md-list-item.federationProject(ng-repeat="item in vm.federation")
+						md-list-item.federationProject(ng-repeat="item in vm.newFederationData.projects")
 							md-icon.angular-material-icons dashboard
 							p
 								| {{item.project.project}}
