--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -72,7 +72,7 @@ home .homeUserContent md-tabs-wrapper {
 .cardInfo {
     text-align: center;
     padding: 15px;
-    background: #E8EAF6;
+    background: rgba(0,69,148,.1);
     margin: 15px;
     border-radius: 4px;
 }
