ISSUE #235 - Card filter occupies as mush space as possible

--- a/frontend/panel/jade/panelCard.jade
+++ b/frontend/panel/jade/panelCard.jade
@@ -8,8 +8,7 @@ div(layout="column", class="md-whiteframe-1dp")
 			span(ng-if="!vm.showFilter" flex="50")
 				h2
 					span {{vm.contentData.title}}
-			#filterContainer
-			span(flex)
+			#filterContainer(flex)
 
 			// Options
 			#options(layout="row")
