--- a/frontend/panel/jade/panelCardFilter.jade
+++ b/frontend/panel/jade/panelCardFilter.jade
@@ -1,5 +1,4 @@
-div(ng-if="vm.showFilter", layout="row" flex="100")
-	span(flex="100")
-		input#panelCardFilterInput(type="text", ng-model="vm.filterInputText" placeholder=" Filter" flex="100")
+div(ng-if="vm.showFilter", layout="row", flex)
+	input#panelCardFilterInput(type="text", ng-model="vm.filterInputText", placeholder=" Filter", flex)
 	div(flex="15", ng-if="vm.showClearFilterButton")
-		md-icon(md-font-icon="fa-times-circle" class="fa" ng-click="vm.clearFilter()")
+		md-icon(md-font-icon="fa-times-circle" class="fa", ng-click="vm.clearFilter()")
