ISSUE #227 - Improved invoice layout, remove URL parameters when returning from PayPal

--- a/frontend/billing/css/billing.css
+++ b/frontend/billing/css/billing.css
@@ -7,6 +7,14 @@ billing {
     color: rgba(0, 0, 0, 0.8);
 }
 
+billing #billingMainContent {
+    width: 90%
+}
+
+billing #billingGap1 {
+    height: 100px;
+}
+
 billing p,
 billing label {
     color: rgba(0, 0, 0, 0.7);
@@ -46,4 +54,12 @@ billing #billingPeriod {
     color: rgba(0,0,0,.4);
     font-size: 14px;
     margin-top: 5px;
+}
+
+billing #billingInvoiceLogo {
+    width: 200px
+}
+
+billing #billingTotalValue {
+    font-weight: bold;
 }
